--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cursor-talk-to-figma-mcp",
-  "description": "Cursor Talk to Figma MCP",
+  "name": "tom-talk-to-figma-mcp",
+  "description": "Tom Talk to Figma MCP",
   "version": "0.3.3",
   "module": "dist/server.js",
   "main": "dist/server.js",
   "bin": {
-    "cursor-talk-to-figma-mcp": "dist/server.js"
+    "tom-talk-to-figma-mcp": "dist/server.js"
   },
   "files": [
     "dist",
@@ -13,8 +13,10 @@
   ],
   "type": "module",
   "scripts": {
-    "start": "bun run dist/server.js",
+    "start": "bun run build && bun run dist/server.js --mode=http",
+    "start:stdio": "bun run build && bun run dist/server.js",
     "socket": "bun run src/socket.ts",
+    "socket:hosted": "./scripts/socket-hosted.sh",
     "setup": "./scripts/setup.sh",
     "build": "tsup",
     "build:watch": "tsup --watch",
