--- a/smithery.yaml
+++ b/smithery.yaml
@@ -10,5 +10,5 @@ startCommand:
     |-
     (config) => ({
       command: 'bunx',
-      args: ['cursor-talk-to-figma-mcp']
+      args: ['tom-talk-to-figma-mcp']
     })
